name:                TimeZones
version:             0.1.0.0
synopsis:            Demonstration of using Frames with date/time data
license:             BSD3
license-file:        LICENSE
author:              Anthony Cowley
maintainer:          acowley@gmail.com
copyright:           Copyright (C) 2016 Anthony Cowley
category:            CSV,Data
build-type:          Simple
cabal-version:       >=1.10

executable TimeZones
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Columns, TimeIn
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, Frames, tz, text, time, readable,
                       pipes, template-haskell
  ghc-options:         -Wall